<resources>
    <string name="app_name">AD Cloud</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="toast_minimum_password">Password too short, enter minimum 6 characters</string>
    <string name="auth_failed">This email or password is wrong </string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="welcome_message">Welcome to AD Cloud</string>


    <string name="action_settings">Settings</string>
    <string name="recording">recording</string>

    first
    <string name="alert_dialog_title">Alert  Dialog</string>
    <string name="alert_dialog_getout_message">Do you want to get out of AD Cloud?</string>
    <string name="alert_dialog_positive_btn">Yes</string>
    <string name="alert_dialog_negative_btn">No</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="alert_dialog_help_title">Help</string>
    <string name="alert_dialog_help_message_first">AD Cloud is a platform for advertisement searching,you can onclick "search ad" button if you are a audience,or you can onclick "member login" button to be our member for creating advertisement data if you are a advertiser</string>
    <string name="alert_dialog_close_btn">Close</string>


    login
    <string name="LoginActivity_title">Member Login</string>
    <string name="toast_empty_email">Enter your email address</string>
    <string name="toast_empty_password">Enter your password</string>

    main
    <string name="MainActivity_title">Manager the AD</string>
    <string name="contact_send_mail_title">SEND EMAIL</string>
    <string name="contact_send_mail_context">If you have any question,you can tell us</string>
    <string name="alert_dialog_signout_message">Do you want to sign out ?</string>
    <string name="select_service_item">Select Service Item</string>
    <string name="delete_ad">Delete the AD</string>
    <string name="go_to_url">Go to AD Url</string>
    <string name="alert_dialog_delete_message"> Do you want to delete it ? </string>
    <string name="toast_delete">Delete AD</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign out</string>
    <string name="alert_dialog_help_message_main">You can create the advertisement data for audience to search,after do it,you can manage your data,if you have any question,contact us</string>

    resetpassword
    <string name="toast_send_reset_email">We have sent you instructions to reset</string>
    <string name="toast_send_failed">Failed to send reset email</string>

    search
    <string name="SearchActivity_title">Search AD</string>

    signup
    <string name="SignUp_title">Register</string>
    <string name="toast_account_apply_state">Apply  state : </string>
    <string name="toast_authentication_failed">Authentication failed. </string>

    add AD
    <string name="AddAdvertisementActivity_title">Edit The Advertisement</string>
    <string name="AdName">Advertisement Name</string>
    <string name="AdUrl">Advertisement URL</string>
    <string name="Add">Add</string>
    <string name="Revise">Revise</string>
    <string name="Select_file">Select The File</string>
    <string name="Ad_name_exist">Mistake：This advertisement name already exist</string>
    <string name="Ad_data_incomplete">Mistake：Incomplete Data Entry</string>
    <string name="Ad_name_not_exist">Mistake：This Advertisement Name Is Not Exist</string>
    <string name="Successfully">Successfully</string>
    <string name="alert_dialog_add_title">Create the new AD</string>
    <string name="alert_dialog_add_message">Are you sure to add it?</string>
    <string name="alert_dialog_revise_title">Revise the old AD</string>
    <string name="alert_dialog_revise_message">Are you sure to revise it?</string>


</resources>
