<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    tools:context=".AddAdvertisementActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_add_audio"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@null"
                app:srcCompat="@drawable/choose_file" />

            <TextView
                android:id="@+id/show_audio_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginTop="18dp"
                android:hint="@string/Select_file"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/adname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AdName"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AdUrl"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_ad"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/Add"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_ad_revise"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/Revise"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>